fix overlap margin bottom

--- a/meinberlin/assets/scss/components/_filter_bar.scss
+++ b/meinberlin/assets/scss/components/_filter_bar.scss
@@ -34,8 +34,12 @@
     }
 }
 
-.filter-bar--overlap {
+// NOTE: this can not be a modifier because `top` and `clearfix` need to be on
+// separate elements.
+.filter-bar__overlap-wrapper {
     position: relative;
-    $button-height: 2.4em;
-    top: -($button-height / 2);
+    $button-height: 2.4;
+    $overlap: $button-height / 2 * $font-size-sm;
+    top: -$overlap;
+    margin-bottom: -$overlap;
 }
